[metadata]
name = phew
version = 0.1.dev
description = Extensible Models.
long_description = file: README.rst
classifiers =
   Programming Language :: Python

author = Manuel Vazquez Acosta
author_email = mva.led@gmail.com
maintainer = Manuel Vázquez Acosta
license = GPLv3
url = https://github.com/mvaled/phew

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
   dataclasses;python_version<"3.7"


[flake8]
select = C,E,F,W,B
ignore =
    # line length is checked by Black
    E501
    B950

    # do not assign a lambda expression, use a def
    E731

    # module level import not at top of file
    E402

    # We may break after binary operators (... and
    #                                      ...)
    W504

    # We may break before binary operators (...
    #                                       and ...)
    W503

    E203  # space before : (in slices)
    E501  # line too long (use bugbear)

    E741  # do not use variables named ‘l’, ‘O’, or ‘I’
    E126  # continuation line over-indented for hanging indent
    E252  # missing whitespace around parameter equals

    B011  # we like assert False; it's better than raise AssertionError
          # because we don't that code to survive in production


[coverage:run]
branch = False


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    def __hash__
    def __str__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    return NotImplemented

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

fail_under = 95
skip_covered = true
show_missing = true
